--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prestorybook": "rnstl"
   },
   "dependencies": {
+    "compare-versions": "^3.5.1",
     "react": "16.8.1",
     "react-native": "0.61.2",
     "react-native-config": "^0.11.7",
